--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <!-- Dependencies -->
         <script src="./node_modules/react/umd/react.development.js"></script>
         <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+        </script>
 
         <!-- Main -->
         <script src="./dist/bundle.js"></script>
